# UltimaOS

./: .clangd  .gitignore  README.md  SConstruct  bochsrc.bxrc  bx_enh_dbg.ini  compile_commands.json  config.mk  makefile  output.txt  run.txt  setupenv.sh  snapshot.txt  toolchain_settings.yml
.cache/clangd/index/: ACPI.cpp.FCCB7ECCB7B43792.idx  ACPI.hpp.D7E3D14DEEC73F9A.idx  ACPI_Header.hpp.2805D98B81E1D847.idx  Acpi10.h.F649021412507D1B.idx  Acpi20.h.B55F3F650804E5CC.idx  Acpi30.h.6965D9C96F5A74CF.idx  Acpi40.h.FE3AC1846355CF1E.idx  Acpi50.h.BBFC6F01A6F06DE1.idx  Acpi51.h.44EEC6779D6A606B.idx  Acpi60.h.9161FC8BA166CA04.idx  AcpiAml.h.30701884B9C4B7B0.idx  Base.h.5F5BF8E3F58C4370.idx  BaseLib.h.2A775C5B2A799D01.idx  BaseMemoryLib.h.ECB05C5C9C111F50.idx  Bitmap.hpp.6C2C0110B3E095DF.idx  Bluetooth.h.737C9667CC74228A.idx  DevicePath.h.39F56526E7C19309.idx  ELFHeaders.hpp.B6942FD869BB80DF.idx  ELFLoader.hpp.4DB6928EF2C16526.idx  FAT32.hpp.E7BFCC6DF0B92CFC.idx  FileInfo.h.0AA546E7D64C40F9.idx  Filesystem.hpp.5BE2F3EFC391389F.idx  (+96 more)
.zed/: settings.json
buildsystem.old/: SConscriptBoot  SConscriptCore  SConscriptImage  SConscriptKernel  SConstructMain  config.mk
image/: SConscript  image.mk  meson.build
old_codebase/bootloader_BIOS/: main.cpp  nbootloader.asm
old_codebase/loader_BIOS/: SConscript
scripts/: bochs.sh  debug.sh  generate_isr.py  run.sh  setup_toolchain.py
scripts/build_scripts/: config.py
src/kernel/: SConscript  debug.c  debug.h  globals.cpp  globals.h  globals.hpp  kernel.mk  linker.ld  main.c  main.cpp  memory.c  stdio.c  stdio.h  uefi_globals.cpp
(+189 files in other folders)
